--- a/kazoo/composer/kz-aio-master/docker-compose.yml
+++ b/kazoo/composer/kz-aio-master/docker-compose.yml
@@ -28,12 +28,12 @@ x-devol-cfg:
     - type: bind
       source: ./config.ini
       target: /etc/kazoo/config.ini
+    - type: tmpfs
+      target: /etc/kazoo/ra
 
 volumes:
     couchdb-data:
         name: kzmaster-couchdb-data
-    rabbit-data:
-        name: kz-master-rabbit-data
 
 services:
   couchdb:
@@ -69,8 +69,7 @@ services:
         - type: bind
           source: ./kz-rabbitmq-entry.sh
           target: /kz-rabbitmq-entry.sh
-        - type: volume
-          source: rabbit-data
+        - type: tmpfs
           target: /var/lib/rabbitmq
     entrypoint: /kz-rabbitmq-entry.sh
     command: ["rabbitmq-server"]
