--- a/kazoo/composer/kz-aio-4.3/docker-compose.yml
+++ b/kazoo/composer/kz-aio-4.3/docker-compose.yml
@@ -32,8 +32,6 @@ x-devol-cfg:
 volumes:
     couchdb-data:
         name: kz-4.3-couchdb-data
-    rabbit-4.3-data:
-        name: kz-4.3-rabbit-data
 
 services:
   couchdb:
@@ -66,8 +64,7 @@ services:
     environment:
         RABBITMQ_USE_LONGNAME: 'true'
     volumes:
-        - type: volume
-          source: rabbit-4.3-data
+        - type: tmpfs
           target: /var/lib/rabbitmq
     # when not using network_mpde=host
     # ports:
