--- a/kazoo/composer/kz-aio-master/docker-compose.yml
+++ b/kazoo/composer/kz-aio-master/docker-compose.yml
@@ -109,83 +109,83 @@ services:
     # networks:
     #   kazoo:
 
-  kazoo_ecallmgr:
-    image: icehess/kz-dev-env:21
-    hostname: 'ecallmgr.hsm.com'
-    environment:
-       << : *kz-env
-       KAZOO_NODE: ecallmgr
-       NODE_NAME: ecallmgr
-       REL: ecallmgr
-       KAZOO_APPS: "ecallmgr"
-    volumes: *kz-vol
-    command: ["bash"]
-    tty: true
-    network_mode: host
-    # when not using network_mpde=host
-    # ports:
-    #   - target: 11500
-    #     mode: host
-    # networks:
-    #   kazoo:
+  # kazoo_ecallmgr:
+  #   image: icehess/kz-dev-env:21
+  #   hostname: 'ecallmgr.hsm.com'
+  #   environment:
+  #      << : *kz-env
+  #      KAZOO_NODE: ecallmgr
+  #      NODE_NAME: ecallmgr
+  #      REL: ecallmgr
+  #      KAZOO_APPS: "ecallmgr"
+  #   volumes: *kz-vol
+  #   command: ["bash"]
+  #   tty: true
+  #   network_mode: host
+  #   # when not using network_mpde=host
+  #   # ports:
+  #   #   - target: 11500
+  #   #     mode: host
+  #   # networks:
+  #   #   kazoo:
 
-  freeswitch:
-    image: icehess/kz-fs:20.19.6-2600hz
-    hostname: 'freeswitch.hsm.com'
-    command: /usr/bin/docker-freeswitch start
-    environment:
-        LOCAL_USER: "true"
-    #    FS_TRACE: "true"
-    network_mode: host
-    # when not using network_mpde=host
-    # networks:
-    #   kazoo:
+  # freeswitch:
+  #   image: icehess/kz-fs:20.19.6-2600hz
+  #   hostname: 'freeswitch.hsm.com'
+  #   command: /usr/bin/docker-freeswitch start
+  #   environment:
+  #       LOCAL_USER: "true"
+  #   #    FS_TRACE: "true"
+  #   network_mode: host
+  #   # when not using network_mpde=host
+  #   # networks:
+  #   #   kazoo:
 
-  kamailio:
-    image: icehess/kz-kam:5.2.5-2600hz.rc1.0
-    hostname: 'kamailio.hsm.com'
-    command: /usr/bin/docker-kamailio start
-    environment:
-        LOCAL_USER: "true"
-        KAM_EXTRA_OPTIONS: "-x tlsf -w /tmp -A WITH_AUTH_TOKEN"
-    #     ENABLE_SIP_TRACE_ROLE: "true"
-    network_mode: host
-    # when not using network_mpde=host
-    # ports:
-    #   - published: 5060 # SIP TCP
-    #     target: 5060
-    #     protocol: tcp
-    #     mode: host
-    #   - published: 5060 # SIP UDP
-    #     target: 5060
-    #     protocol: udp
-    #     mode: host
-    #   - published: 5061 # SSIP (SIP TLS)
-    #     target: 5061
-    #     protocol: tcp
-    #     mode: host
-    #   - published: 7000 # SIP ALG TCP
-    #     target: 7000
-    #     protocol: tcp
-    #     mode: host
-    #   - published: 7000 # SIP ALG UDP
-    #     target: 7000
-    #     protocol: udp
-    #     mode: host
-    #   - published: 7001 # SSIP ALG
-    #     target: 7001
-    #     protocol: tcp
-    #     mode: host
-    #   - published: 5064 # http/https/websocket
-    #     target: 5064
-    #     protocol: tcp
-    #     mode: host
-    #   - published: 5065 # http/https/websocket
-    #     target: 5065
-    #     protocol: tcp
-    #     mode: host
-    # networks:
-    #   kazoo:
+  # kamailio:
+  #   image: icehess/kz-kam:5.2.5-2600hz.rc1.0
+  #   hostname: 'kamailio.hsm.com'
+  #   command: /usr/bin/docker-kamailio start
+  #   environment:
+  #       LOCAL_USER: "true"
+  #       KAM_EXTRA_OPTIONS: "-x tlsf -w /tmp -A WITH_AUTH_TOKEN"
+  #   #     ENABLE_SIP_TRACE_ROLE: "true"
+  #   network_mode: host
+  #   # when not using network_mpde=host
+  #   # ports:
+  #   #   - published: 5060 # SIP TCP
+  #   #     target: 5060
+  #   #     protocol: tcp
+  #   #     mode: host
+  #   #   - published: 5060 # SIP UDP
+  #   #     target: 5060
+  #   #     protocol: udp
+  #   #     mode: host
+  #   #   - published: 5061 # SSIP (SIP TLS)
+  #   #     target: 5061
+  #   #     protocol: tcp
+  #   #     mode: host
+  #   #   - published: 7000 # SIP ALG TCP
+  #   #     target: 7000
+  #   #     protocol: tcp
+  #   #     mode: host
+  #   #   - published: 7000 # SIP ALG UDP
+  #   #     target: 7000
+  #   #     protocol: udp
+  #   #     mode: host
+  #   #   - published: 7001 # SSIP ALG
+  #   #     target: 7001
+  #   #     protocol: tcp
+  #   #     mode: host
+  #   #   - published: 5064 # http/https/websocket
+  #   #     target: 5064
+  #   #     protocol: tcp
+  #   #     mode: host
+  #   #   - published: 5065 # http/https/websocket
+  #   #     target: 5065
+  #   #     protocol: tcp
+  #   #     mode: host
+  #   # networks:
+  #   #   kazoo:
 
   monster-ui:
     image: ${MONSTER_IMG:-node:10.16.0-alpine}
