update kazoo dockerfiles

--- a/kazoo/composer/docker/files/kazoo-config.ini
+++ b/kazoo/composer/docker/files/kazoo-config.ini
@@ -1,6 +1,6 @@
 [zone]
 amqp_uri = "amqp://guest:guest@127.0.0.1:5672"
-name = fmt
+; name = fmt
 
 [data]
 config = couchdb3
@@ -12,13 +12,13 @@ username = admin
 password = admin
 
 [log]
-console=debug
+console=error
 file=debug
 
 [kazoo_apps]
 host = kazoo_apps.2600hz-test.com
-zone = fmt
+; zone = fmt
 
 [ecallmgr]
 host = ecallmgr.2600hz-test.com
-zone = fmt
+; zone = fmt
