--- a/kazoo/composer/kz-aio-4.3/config.ini
+++ b/kazoo/composer/kz-aio-4.3/config.ini
@@ -1,9 +1,9 @@
 [zone]
-amqp_uri = "amqp://guest:guest@127.0.0.1:5672"
+amqp_uri = "amqp://guest:guest@rabbitmq:5672"
 name = fmt
 
 [bigcouch]
-ip = "127.0.0.1"
+ip = "couchdb"
 port = 5984
 
 admin_port = 5986
@@ -23,9 +23,5 @@ console=error
 file=debug
 
 [kazoo_apps]
-host = kazoo_apps.hsm.com
-zone = fmt
-
-[ecallmgr]
-host = ecallmgr.hsm.com
+host = kazoo_apps.4.3.hsm.com
 zone = fmt
